# clawdesk

./: .gitignore  README.md  debug_build.bat  debug_log.txt  dev_log_retry.txt  final_agent_instructions.txt  index.html  package.json  phase3_final.txt  pnpm-lock.yaml  tauri_fixed.json  tauri_fixed_2.json
.github/workflows/: release.yml
.zest/: chat_history.json  project_stack.json  runner_state.json  task_list.json
.zest/errors/: errors_20260212.ndjson  errors_20260213.ndjson
.zest/logs/: session_20260212_231301.ndjson  session_20260212_234619.ndjson  session_20260212_235237.ndjson  session_20260213_180122.ndjson  session_20260213_184459.ndjson  session_20260213_192436.ndjson  session_20260213_203756.ndjson  session_20260213_211442.ndjson  session_20260213_235836.ndjson  session_20260214_000702.ndjson  session_20260214_001925.ndjson  session_20260214_012440.ndjson
.zest/reports/: session_20260212_231301.md  session_20260212_234619.md  session_20260212_235237.md  session_20260213_184459.md  session_20260213_192436.md  session_20260213_203756.md  session_20260213_211442.md  session_20260213_235836.md  session_20260214_000702.md  session_20260214_001925.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CommandModal.tsx
src/lib/: bootstrap.ts  config.ts  gateway.ts  store.ts  validate.ts
src/screens/: ChatScreen.tsx  CrashScreen.tsx  ErrorScreen.tsx  LoadingScreen.tsx  OnboardingScreen.tsx  SettingsScreen.tsx
