[package]
name = "clawdesk"
version = "0.1.0"
description = "ClawDesk — Your personal AI assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "clawdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
