[package]
name = "clawdesk"
version = "0.1.2"
description = "ClawDesk — Your personal AI assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "clawdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
